<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>com.vaadin</groupId>
        <artifactId>vaadin-parent</artifactId>
        <version>2.2.1</version>
        <relativePath />
    </parent>
    <artifactId>vaadin-testbench-parent</artifactId>
    <packaging>pom</packaging>
    <version>9.2-SNAPSHOT</version>
    <name>Vaadin TestBench parent</name>

    <organization>
        <name>Vaadin Ltd</name>
        <url>http://vaadin.com/</url>
    </organization>
    <url>http://vaadin.com/</url>
    <issueManagement>
        <system>trac</system>
        <url>http://dev.vaadin.com/</url>
    </issueManagement>
    <licenses>
        <license>
            <name>Vaadin Commercial License and Service Terms</name>
            <url>https://vaadin.com/commercial-license-and-service-terms</url>
        </license>
    </licenses>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <Implementation-Version>${project.version}</Implementation-Version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <selenium.version>4.18.1</selenium.version>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <spring.version>6.0.9</spring.version>
        <spring.security.version>6.1.0</spring.security.version>
        <vaadin.version>24.3-SNAPSHOT</vaadin.version>
        <flow.version>${vaadin.version}</flow.version>
        <slf4j.version>2.0.7</slf4j.version>
        <failsafe.version>3.1.0</failsafe.version>
        <surefire.version>3.1.0</surefire.version>
        <currentYear>2023</currentYear>
    </properties>
    <modules>
        <module>vaadin-testbench-bom</module>
        <module>vaadin-testbench-shared</module>
        <module>vaadin-testbench-core</module>
        <module>vaadin-testbench-core-junit5</module>
        <module>vaadin-testbench-integration-tests</module>
        <module>vaadin-testbench-integration-tests-junit5</module>
        <module>vaadin-testbench-unit-shared</module>
        <module>vaadin-testbench-unit</module>
        <module>vaadin-testbench-unit-junit5</module>
        <module>vaadin-testbench-unit-quarkus</module>
    </modules>
    <repositories>
        <repository>
            <id>central</id>
            <url>https://repo.maven.apache.org/maven2</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>vaadin-prereleases</id>
            <url>https://maven.vaadin.com/vaadin-prereleases</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>
    <pluginRepositories>
        <pluginRepository>
            <id>central</id>
            <url>https://repo.maven.apache.org/maven2</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </pluginRepository>
        <pluginRepository>
            <id>vaadin-prereleases</id>
            <url>https://maven.vaadin.com/vaadin-prereleases</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </pluginRepository>
    </pluginRepositories>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.vaadin</groupId>
                <artifactId>license-checker</artifactId>
                <version>1.12.9</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <build>
        <plugins>
            <plugin>
                <artifactId>maven-deploy-plugin</artifactId>
                <version>2.5</version>
                <configuration>
                    <skip>false</skip>
                </configuration>
            </plugin>
            <plugin>
                <groupId>net.revelc.code.formatter</groupId>
                <artifactId>formatter-maven-plugin</artifactId>
                <version>2.18.0</version>
                <configuration>
                    <configFile>https://raw.githubusercontent.com/vaadin/flow/master/eclipse/VaadinJavaConventions.xml</configFile>
                    <!-- Provide a dummy JS config file to avoid errors -->
                    <configJsFile>https://raw.githubusercontent.com/vaadin/flow/master/eclipse/VaadinJavaConventions.xml</configJsFile>
                    <lineEnding>LF</lineEnding>
                </configuration>
            </plugin>
        </plugins>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>com.mycila</groupId>
                    <artifactId>license-maven-plugin</artifactId>
                    <version>2.6</version>
                    <configuration>
                        <header>src/license/vclst/header.txt</header>
                        <quiet>false</quiet>
                        <failIfMissing>true</failIfMissing>
                        <aggregate>false</aggregate>
                        <useDefaultExcludes>true</useDefaultExcludes>
                        <useDefaultMapping>true</useDefaultMapping>
                        <encoding>UTF-8</encoding>
                        <properties>
                            <year>${currentYear}</year>
                        </properties>
                        <excludes>
                            <exclude>target/**</exclude>
                            <exclude>**/*.xml</exclude>
                            <exclude>**/*.properties</exclude>
                            <exclude>src/license/**/*</exclude>
                            <exclude>**/*.txt</exclude>
                        </excludes>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
